# yolov8-dataset-merger

./: .gitignore  .readthedocs.yaml  README.md  background_images.py  build_sphinx.py  change_class_according_to_HSV.py  common_functions.py  examples.py  pyproject.toml  resolve_filenames_conflicts.py  supervisely_json_to_yolov8.py
docs/: conf.py  map_classes_number.rst  resolve_filenames_conflicts.rst
docs/_build/doctrees/: background_images.doctree  change_class_according_to_HSV.doctree  common_functions.doctree  convert_segmentation_mask_to_bounding_box.doctree  environment.pickle  examples.doctree  modules.doctree  resolve_filenames_conflicts.doctree  yaml_file_merger.doctree
docs/_build/html/: common_functions.html  examples.html  map_classes_number.html  modules.html  searchindex.js  supervisely_json_to_yolov8.html  yaml_file_merger.html
docs/_build/html/_modules/: common_functions.html  convert_segmentation_mask_to_bounding_box.html  examples.html  map_classes_number.html  resolve_filenames_conflicts.html  supervisely_json_to_yolov8.html  yaml_file_merger.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  supervisely_json_to_yolov8.rst.txt
yolov8_dataset_merger/: __init__.py  background_images.py  build_sphinx.py  change_class_according_to_HSV.py  common_functions.py  convert_segmentation_mask_to_bounding_box.py  examples.py  map_classes_number.py  resolve_filenames_conflicts.py  supervisely_json_to_yolov8.py  yaml_file_merger.py
yolov8_dataset_merger/docs/: background_images.rst  change_class_according_to_HSV.rst  conf.py  convert_segmentation_mask_to_bounding_box.rst  modules.rst  requirements.txt  yaml_file_merger.rst  yolov8_dataset_merger.rst
yolov8_dataset_merger/docs/_build/doctrees/: build_sphinx.doctree  environment.pickle  index.doctree  map_classes_number.doctree  modules.doctree  supervisely_json_to_yolov8.doctree  yolov8_dataset_merger.doctree
yolov8_dataset_merger/docs/_build/html/: .buildinfo  background_images.html  build_sphinx.html  change_class_according_to_HSV.html  convert_segmentation_mask_to_bounding_box.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  resolve_filenames_conflicts.html  search.html  searchindex.js  yolov8_dataset_merger.html
yolov8_dataset_merger/docs/_build/html/_modules/: background_images.html  build_sphinx.html  change_class_according_to_HSV.html  index.html
yolov8_dataset_merger/docs/_build/html/_sources/: build_sphinx.rst.txt  (+2 more)
(+11 files in other folders)
